# wujihandpy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile.package-builder  README.md  README.zh-CN.md  pyproject.toml  pytest.ini  update_stubs.py
.chglog/: config.yml
.github/: docs-sync-public-packages.txt
.github/scripts/: smoke_wujihandcpp_deb.sh
.github/scripts/docs-followup/: docs-followup-prompt.sh
.github/workflows/: auto-release.yml  ci-cpp11-header-compatibility.yml  ci-python-tests.yml  ci-ros2-downstream.yml  cpp11-compat-check.yml  deb-downstream-ros2.yml  docs-followup.yml  docs-notify.yml  docs-prerelease-sync.yml  notify-docs.yml  pr-wujihandcpp-deb-gate.yml  pytest.yml  python-package-ci.yml  release-package.yml  release.yml  wujihandcpp-deb-package.yml  wujihandcpp-package-build.yml
bridge/: README.md  hand_zenoh_bridge.py
bridge/cpp/: CMakeLists.txt  LICENSE
bridge/cpp/src/: hand_bridge.cpp  hand_bridge.hpp  json_helpers.hpp  main.cpp  zenoh_demo.cpp  zenoh_realtime.cpp
bridge/python/: hand_zenoh_bridge.py  requirements.txt
ci/: check_wujihandros2_downstream.sh
docs/: api.md  architecture.md  ci-workflows.md  refactor-plan.md  test-framework.md  test-priority-analysis.md  wujihandcpp-deb-smoke-gate.md
docs/en/: api-reference.mdx  meta.json  tutorial.mdx
docs/internal/design/: add-handedness.md
docs/plans/: 2026-03-16-hand-zenoh-bridge.md  2026-03-17-cpp-zenoh-bridge.md
docs/quality/designs/: wh110-csdk-api-test-plan.md
docs/zh/: api-reference.mdx  tutorial.mdx
example/: 1.realtime_read.py  3.realtime.py  6.tactile.py  6.zenoh_realtime.py  9.write_current_limit_compat_verify.py  joint_with_tactile.py  zenoh_realtime.py  zero_hand.py
example/joint/: 1.read.py  2.write.py  4.async.py  5.multithread.py  7.glove_donning.py  glove_donning.py
example/tactile/: basic.py
example/tools/: disable_hand.py  dual_hand_disable.py  dual_hand_enable.py  dual_hand_zero.py  enable_hand.py
example/verify/: _utils.py  dual_control_async.py  dual_control_realtime.py  dual_control_write.py  dual_effort_1khz_sync.py  dual_realtime_effort_read_manual_push.py  dual_realtime_mode_entry.py  dual_write_current_limit_compat.py  dual_write_effort_limit.py  effort_sync.py  realtime_controller.py  realtime_read.py  write_effort_limit.py
examples/: integration_demo.py
public/: CHANGELOG.md
public/docs/en/: api-reference.mdx  tutorial.mdx
public/docs/zh/: api-reference.mdx  meta.json  tutorial.mdx
src/: controller.hpp  main.cpp  tactile.hpp  touch_board_wrapper.hpp  wrapper.hpp
src/wujihandpy/: __init__.py  _upgrade_check.py  tactile.py  tactile.pyi
src/wujihandpy/_core/: __init__.pyi  filter.pyi  logging.pyi  tactile.pyi
src/wujihandpy/bridge/: __init__.py  cli.py  hand_zenoh_bridge.py  tactile_bridge.py
tests/: README.md  __init__.py  conftest.py  hil_sdk.py  test_bridge.py  test_ci_ros2_downstream_workflow.py  test_controller.py  test_exceptions.py  test_filter.py  test_finger.py  test_hand.py  test_joint.py  test_logging.py  test_tactile_exceptions.py  test_tactile_imports.py  test_upgrade_check.py  test_wujihandcpp_packaging.py
wujihandcpp/: CMakeLists.txt  README.md
wujihandcpp/.chglog/: config.yml
wujihandcpp/cmake/: wujihandcppConfig.cmake.in
wujihandcpp/docs/zh-cn/: docker-develop-guide.md
wujihandcpp/example/pdo_test/src/: main.cpp
wujihandcpp/example/simple_test/src/: main.cpp
wujihandcpp/include/wujihandcpp/data/: hand.hpp  helper.hpp  joint.hpp  tactile.hpp  tactile_device.hpp
wujihandcpp/include/wujihandcpp/device/: controller.hpp  data_operator.hpp  hand.hpp  latch.hpp  tactile_board.hpp  tactile_glove.hpp  touch_board.hpp
wujihandcpp/include/wujihandcpp/filter/: low_pass.hpp
wujihandcpp/include/wujihandcpp/protocol/: handler.hpp  tactile_command.hpp
wujihandcpp/src/device/: frame_demuxer.cpp  frame_demuxer.hpp  hand.cpp  tactile_board.cpp  tactile_cdc_demuxer.cpp  tactile_cdc_demuxer.hpp  tactile_glove.cpp  touch_board.cpp
wujihandcpp/src/protocol/: frame_builder.hpp  handler.cpp  protocol.hpp  tactile_parser.hpp  vofa_forwarder.hpp
wujihandcpp/src/protocol/scope/: scope_pdo.hpp  vofa_forwarder.hpp
wujihandcpp/src/transport/: byte_stream.hpp  cdc_byte_stream.cpp  cdc_byte_stream.hpp  cdc_transport.cpp  cdc_transport.hpp  transport.hpp  usb.cpp
wujihandcpp/tests/cpp11_compat/: CMakeLists.txt  main.cpp
wujihandcpp/tests/device/: frame_demuxer_test.cpp  hand_registry_test.cpp  probe_handedness_test.cpp
